--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
+  "homepage": "https://ymorgenstern.github.io/server-load-simulator",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
